# typst-pagemaker

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  STYLE_GUIDE.md  demo.org  index.html  my-fonts.org  pyproject.toml
.github/workflows/: auto-publish.yml  publish.yml
assets/fonts/: Shree714.ttc
docs/: master_styles.md
examples/: custom_styles_demo.org  debug_overlay.org  debug_overlay_test.org  example_from_readme_snippet.org  example_text_emphasis.org  example_text_lists_links_emphasis.org  example_text_table.org  flow_demo.org  font-test.org  font_management_demo.org  font_overview.org  font_system_demo.org  ignore_semantics_demo.org  margins_demo.org  master_pages_demo.org  rectangle_demo.org  sample.org  svg_demo.org  test_assets.org  test_assets_working.org  test_image_fit.org  test_pdf_fit.org
src/: gen_typst.py
src/pagemaker/: __init__.py  cli.py  fonts.py  generator.py  parser.py  table_render.py  validation.py
src/pagemaker/generation/: __init__.py  core.py  elements.py  layout.py  pdf_postprocess.py  pdf_processor.py
src/pagemaker/utils/: __init__.py  alignment.py  file_ops.py  font_discovery.py  typst_helpers.py
tests/: README.md
tests/fixtures/: basic.org  edge_cases.org  pdf_test.org  rectangle_test.org
tests/integration/: test_auto_download_fonts_cli.py  test_helpers_integration.py  test_muchpdf_assets.py  test_pdf_compile_cli.py  test_pdf_output_intent_cli.py  test_pdf_sanitize_fallback_cli.py  test_pipeline.py  test_rectangle_style_only_integration.py  test_svg_master_margins_integration.py  test_tables_cli.py  test_typst_no_nested_brackets_cli.py
tests/unit/: test_a1_area.py  test_align_and_flow.py  test_area_and_padding_inheritance.py  test_cli.py  test_coords_total.py  test_custom_styles.py  test_edge_cases.py  test_fonts_helpers.py  test_gen_typst.py  test_hardbreak_and_list_spacing.py  test_helpers_typst.py  test_ignore_semantics.py  test_ignored_overrides_warning.py  test_justify_parse_from_org.py  test_margin_sizes_mm.py  test_no_literal_brackets_helpers.py  test_padding_and_generator.py  test_padding_zero_sum.py  test_pagemaker_api.py  test_paragraphs.py  test_pdf_align_and_scale_mode.py  test_pdf_full_page_and_fit.py  test_rectangle_alpha_clamping.py  test_rectangle_minimal_colorrect.py  test_rectangle_padding_generator.py  test_rectangle_radius_and_stroke.py  test_rectangle_style_inheritance.py  test_rectangle_validation_units.py  test_single_typst_page_setting.py  test_svg_and_margins.py  test_tables_generator.py  test_tables_parser.py  test_text_justify_and_image_padding.py  test_toc.py  test_uniform_page_size_enforcement.py  test_watch_and_validation.py
