[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pagemaker"
version = "0.1.0"
description = "Org-mode to Typst slide/page generator"
authors = [ { name="Project" } ]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
pagemaker = "pagemaker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
