[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "typst-pagemaker"
version = "0.1.10"
description = "Structured document-to-page layout system for Typst with explicit positioning and professional typography"
authors = [ { name="Project" } ]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
  "fontdownloader",
  "fonttools>=4.0"
]
keywords = ["typst", "orgmode", "layout", "grid", "slides", "pdf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Text Processing :: Markup",
  "Topic :: Office/Business :: Office Suites",
  "Topic :: Multimedia :: Graphics :: Presentation",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/sanderboer/typst-pagemaker"
Repository = "https://github.com/sanderboer/typst-pagemaker"
Issues = "https://github.com/sanderboer/typst-pagemaker/issues"

[project.scripts]
pagemaker = "pagemaker.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pagemaker = ["fonts/**/*"]

[tool.ruff]
# Match project’s supported Python versions
target-version = "py39"
line-length = 100

[tool.ruff.lint]
# Enable a sensible subset; extend as you like
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
# Keep initial config non-blocking for existing codebase
ignore = [
  "E501",  # line length, many long doc/Typst lines
  "B028",  # warnings.warn stacklevel not critical right now
  "B007",  # unused loop control var in readable loops
  "UP006", # typing.Optional/Union modernisation postponed
  "UP035", # typing imports to builtins postponed
  "F841",  # allow unused variables temporarily
]

[tool.ruff.lint.per-file-ignores]
# Tests sometimes adjust sys.path before imports for in-repo usage
"tests/**" = ["E402", "E501"]
"examples/**" = ["E501"]
# Allow concise multi-imports in __init__.py files
"**/__init__.py" = ["I001"]

[tool.ruff.format]
# Use Ruff’s formatter
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
